# OrlyFin

./: .env.dev.example  .env.example  .env.local.example  .env.prod.example  .env.qa.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  dependencies.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/domains/: __init__.py
backend/app/domains/accounts/: README.md
backend/app/domains/alerts/: README.md
backend/app/domains/attachments/: README.md
backend/app/domains/audit/: README.md
backend/app/domains/auth_users/: README.md
backend/app/domains/budget/: README.md  __init__.py
backend/app/domains/credit_cards/: README.md
backend/app/domains/dashboard/: README.md
backend/app/domains/debt/: README.md
backend/app/domains/expense/: README.md
backend/app/domains/import_export/: README.md
backend/app/domains/income/: README.md
backend/app/domains/payment/: README.md
backend/app/domains/rbac/: README.md
backend/app/domains/reconciliation/: README.md
backend/app/domains/reports/: README.md
backend/app/domains/settings/: README.md
backend/app/interfaces/: __init__.py
backend/app/shared/: __init__.py
backend/migrations/: env.py
backend/migrations/versions/: 20260305_0001_auth_rbac_base.py  20260306_0002_financial_core_v1.py  20260306_0003_ops_modules_v1.py
backend/tests/unit/: test_auth_and_rbac.py  test_financial_modules.py  test_health.py  test_phase4_operations_modules.py  test_storage_security.py
(+167 files in other folders)
